--- a/assets/scss/theme.scss
+++ b/assets/scss/theme.scss
@@ -21,7 +21,7 @@ $ig-blue: #636363 !default;
 @import "~react-image-gallery/styles/scss/image-gallery-no-icon.scss";
 
 .image-gallery-bullets .image-gallery-bullets-container {
-  background-color: rgba(0,0,0,0.2);
+  background-color: rgba(0, 0, 0, 0.2);
   padding: 4px 0;
   border-radius: 20px;
   display: flex;
@@ -32,7 +32,7 @@ $ig-blue: #636363 !default;
 
 .image-gallery-right-nav,
 .image-gallery-left-nav {
-  background-color: rgba(0,0,0,0.2);
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 .image-gallery-thumbnails-wrapper.left {
@@ -40,7 +40,7 @@ $ig-blue: #636363 !default;
 }
 
 .dark-overflow {
-  background: rgba(0,0,0,0.4);
+  background: rgba(0, 0, 0, 0.4);
   position: fixed;
   top: 3.25rem;
   left: 0;
@@ -54,7 +54,9 @@ body {
   transition: margin 200ms ease-in-out;
 }
 
-a, input, button {
+a,
+input,
+button {
   outline: none;
 }
 
@@ -62,7 +64,8 @@ hr.separator {
   margin: 1rem 0;
 }
 
-.hero-body, .section {
+.hero-body,
+.section {
   padding: 1.5rem;
 }
 
@@ -88,11 +91,17 @@ hr.separator {
   font-weight: 300;
 }
 
-.shipping-address2 {}
-.shipping-postalcode {}
-.shipping-phone {}
-.shipping-company { display:none; }
-.shipping-comments {}
+.shipping-address2 {
+}
+.shipping-postalcode {
+}
+.shipping-phone {
+}
+.shipping-company {
+  display: none;
+}
+.shipping-comments {
+}
 
 input[type="number"]::-webkit-outer-spin-button,
 input[type="number"]::-webkit-inner-spin-button {
@@ -113,8 +122,8 @@ MOBILE
   }
 
   body.noscroll {
-    position:fixed;
-    overflow:hidden;
+    position: fixed;
+    overflow: hidden;
   }
 }
 
